--- a/PandoraSimulator/PandoraSimulator.vcxproj
+++ b/PandoraSimulator/PandoraSimulator.vcxproj
@@ -87,7 +87,7 @@
     </Link>
     <PostBuildEvent>
       <Command>echo 请在PandoraSimulatorConfig.xml配置账户等信息！
-if not exist $(SolutionDir)$(Platform)\$(Configuration)\PandoraSimulatorConfig.xml (copy "PandoraSimulatorConfig.xml" "$(SolutionDir)$(Platform)\$(Configuration)\";)</Command>
+if not exist "$(SolutionDir)$(Platform)\$(Configuration)\PandoraSimulatorConfig.xml" (copy "PandoraSimulatorConfig.xml" "$(SolutionDir)$(Platform)\$(Configuration)\";)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -103,7 +103,7 @@ if not exist $(SolutionDir)$(Platform)\$(Configuration)\PandoraSimulatorConfig.x
     </Link>
     <PostBuildEvent>
       <Command>echo 请在PandoraSimulatorConfig.xml配置账户等信息！
-if not exist $(SolutionDir)$(Configuration)\PandoraSimulatorConfig.xml (copy "PandoraSimulatorConfig.xml" "$(SolutionDir)$(Configuration)\";)</Command>
+if not exist "$(SolutionDir)$(Configuration)\PandoraSimulatorConfig.xml" (copy "PandoraSimulatorConfig.xml" "$(SolutionDir)$(Configuration)\";)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -119,7 +119,7 @@ if not exist $(SolutionDir)$(Configuration)\PandoraSimulatorConfig.xml (copy "Pa
     </Link>
     <PostBuildEvent>
       <Command>echo 请在PandoraSimulatorConfig.xml配置账户等信息！
-if not exist $(SolutionDir)$(Platform)\$(Configuration)\PandoraSimulatorConfig.xml (copy "PandoraSimulatorConfig.xml" "$(SolutionDir)$(Platform)\$(Configuration)\";)</Command>
+if not exist "$(SolutionDir)$(Platform)\$(Configuration)\PandoraSimulatorConfig.xml" (copy "PandoraSimulatorConfig.xml" "$(SolutionDir)$(Platform)\$(Configuration)\";)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -139,7 +139,7 @@ if not exist $(SolutionDir)$(Platform)\$(Configuration)\PandoraSimulatorConfig.x
     </Link>
     <PostBuildEvent>
       <Command>echo 请在PandoraSimulatorConfig.xml配置账户等信息！
-if not exist $(SolutionDir)$(Configuration)\PandoraSimulatorConfig.xml (copy "PandoraSimulatorConfig.xml" "$(SolutionDir)$(Configuration)\";)</Command>
+if not exist "$(SolutionDir)$(Configuration)\PandoraSimulatorConfig.xml" (copy "PandoraSimulatorConfig.xml" "$(SolutionDir)$(Configuration)\";)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
