--- a/PandoraStrategy/PandoraStrategy.vcxproj
+++ b/PandoraStrategy/PandoraStrategy.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{B3B810B5-370E-4A47-ACF9-3BC14481DC94}</ProjectGuid>
     <RootNamespace>PandoraStrategy</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -124,10 +124,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="cwEmptyStrategy.cpp" />
+    <ClCompile Include="cwMarketDataReceiver.cpp" />
+    <ClCompile Include="cwPandoraAgentManager.cpp" />
+    <ClCompile Include="cwPandoraPairTrading.cpp" />
+    <ClCompile Include="cwPandoraPositionAgent.cpp" />
     <ClCompile Include="cwStrategyDemo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cwEmptyStrategy.h" />
+    <ClInclude Include="cwMarketDataReceiver.h" />
+    <ClInclude Include="cwPandoraAgentManager.h" />
+    <ClInclude Include="cwPandoraPairTrading.h" />
+    <ClInclude Include="cwPandoraPositionAgent.h" />
     <ClInclude Include="cwStrategyDemo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
