update Linux Support

--- a/PandoraTrade/CMakeLists.txt
+++ b/PandoraTrade/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 3.8)
 
+#cmake_policy(SET CMP0060 NEW)
+
 # set the project name
 project (PandoraTrade)
 
@@ -16,7 +18,7 @@ else()
 message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
 
-set(CMAKE_EXE_LINKER_FLAGS "-no-pie")
+#set(CMAKE_EXE_LINKER_FLAGS "-no-pie")
 
 set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")  # Debug模式下的编译指令
 set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")         # Release模式下的编译指令
@@ -32,7 +34,8 @@ include_directories ("../PandoraStrategy/")
 include_directories ("../Interface/include/")
 include_directories ("../Interface/")
 
-link_directories("${PROJECT_SOURCE_DIR}/../Interface/CTPTradeApiLinux/")
+#link_directories("${PROJECT_SOURCE_DIR}/../Interface/CTPTradeApiLinux/")
+#link_directories("/root/projects/PandoraTrader/Interface/CTPTradeApiLinux")
 
 if (CMAKE_BUILD_TYPE STREQUAL DEBUG)   
     add_definitions(-g -DDEBUG)
@@ -44,15 +47,21 @@ elseif (CMAKE_BUILD_TYPE STREQUAL RELEASE)
 	link_directories("${PROJECT_SOURCE_DIR}/../bin/Release/")
 endif()
 
+
 # 获取正在处理的CMakeLists.txt所在的文件夹下面的所有源文件，放到DIR_SRC变量里面
 aux_source_directory(${CMAKE_CURRENT_LIST_DIR} DIR_SRC)
 
 # add the executable
+add_library(CTPTradeLIB UNKNOWN IMPORTED)
+set_property(TARGET CTPTradeLIB PROPERTY IMPORTED_LOCATION "/root/projects/PandoraTrader/Interface/CTPTradeApiLinux/thosttraderapi_se.so")
+
+add_library(CTPMdLIB UNKNOWN IMPORTED)
+set_property(TARGET CTPMdLIB PROPERTY IMPORTED_LOCATION "/root/projects/PandoraTrader/Interface/CTPTradeApiLinux/thostmduserapi_se.so")
+
 add_executable(PandoraTrader ${DIR_SRC})
 
 TARGET_LINK_LIBRARIES(PandoraTrader pthread)
 target_link_libraries(PandoraTrader libPandoraStrategy.a libcwPandoraDLL_Linux.a libTinyXml_Linux.a )
 
-target_link_libraries(PandoraTrader "/home/wuchangsheng/project/PandoraTrader/Interface/CTPTradeApiLinux/thostmduserapi_se.so")
-target_link_libraries(PandoraTrader "/home/wuchangsheng/project/PandoraTrader/Interface/CTPTradeApiLinux/thosttraderapi_se.so")
-
+target_link_libraries(PandoraTrader CTPTradeLIB)
+target_link_libraries(PandoraTrader CTPMdLIB)
