--- a/PandoraSimulator/CMakeLists.txt
+++ b/PandoraSimulator/CMakeLists.txt
@@ -16,7 +16,7 @@ else()
 message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
 
-set(CMAKE_EXE_LINKER_FLAGS "-no-pie")
+#set(CMAKE_EXE_LINKER_FLAGS "-no-pie")
 
 set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")  # Debug模式下的编译指令
 set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")         # Release模式下的编译指令
